********** SPL 2.0 Alpha 1 **********
===== Build 0095 2019/10/12 =====

* New syntax:
    * Variable declaration and assignment via operator ":="
    * Syntax changes of conditional statements:
        * Parenthesis around condition statement is no longer needed
        * Braces around then block is required
    * Lambda expressions:
        * "x -> f(x)" for single parameter expression
        * "(args...) -> f(x)" for multiple parameters expression


********** SPL 1.7 Alpha 1 **********
### DISCARDED ###
===== Build 0094 2019/06/19 =====

* New syntax:
    * New keyword "keyword", used to define new keywords
    * Added an unary operator for String "run"
* Redesigned unary operator evaluate system
* Bug fixes:
    * Fixed that visualizer recognized a wrong spl script dir
    * Fixed a potential bug that the lexer was using "find" instead of "rfind" to locate the script dir
    * Fixed that the "lang.sp" was automatically nested imported in importing files
    * Fixed that the import node might misled the parser to recognize a module brace into a set creation

********** SPL 1.6.3 **********
===== Build 0093 2019/05/18 =====

* New annotation system:
    * Annotations now supports parameters
* Library updates:
    * unittest.sp:
        * Tests now supports expecting specific exception
* Native classes updates:
    * Added method Set.get():
        * Naively gets an item from a set

********** SPL 1.6.2 **********
===== Build 0092 2019/05/17 =====

* Library updates:
    * math.sp:
        * Added functions 'fact(x)', 'perm(n, k)', 'comb(n, k)'

********** SPL 1.6.1 **********
===== Build 0091 2019/05/11 =====

* Bug fixes:
    * Import error when script directory is the current working directory

********** SPL 1.6 Release **********
===== Build 0090 2019/05/08 =====

* Provided a native way to throw an exception defined in lang.sp
* Importing a namespace will now imports all namespaces of the imported namespace
* Bug fixes: