@@ -1,3 +1,5 @@
+.idea/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -121,3 +123,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+.idea/workspace.xml
