@@ -1,6 +1,7 @@
 <component name="ProjectDictionaryState">
   <dictionary name="zbh">
     <words>
+      <w>extendedby</w>
       <w>subclassof</w>
     </words>
   </dictionary>
