@@ -6,6 +6,8 @@
 * Remove all duplicate operators
 * Manual memory management     ...discarded
 * Lambda expression     ...done
+* Anonymous class     .done
+* Remove heap scope
 
 ===== 1.7 =====
 
