@@ -1,8 +1,10 @@
 var a = 1;
 var b = 2;
 class A {
-    fn A() {
-
+    var x = a;
+    var y;
+    fn A(g) {
+        y = g;
     }
 }
-var c = new A();
+var c = new A(1);
